add nodes state
